# natalianatalia

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  init.bat  install.bat
nnk/: .env  .env.example  docker-compose.yaml  package-lock.json  package.json
nnk/src/: app.module.ts  main.ts
nnk/src/buches/: buches.controller.spec.ts  buches.controller.ts  buches.module.ts  buches.service.spec.ts  buches.service.ts
nnk/src/buches_to_profiles_data/: buches_to_profiles_data.controller.spec.ts  buches_to_profiles_data.controller.ts  buches_to_profiles_data.module.ts  buches_to_profiles_data.service.spec.ts  buches_to_profiles_data.service.ts
nnk/src/profiles/: profiles.controller.ts  profiles.module.ts  profiles.service.ts
nnk/src/profiles_data/: profiles_data.controller.spec.ts  profiles_data.controller.ts  profiles_data.module.ts  profiles_data.service.spec.ts  profiles_data.service.ts
nnk/src/profiles_files/: profiles_files.controller.spec.ts  profiles_files.controller.ts  profiles_files.module.ts  profiles_files.service.spec.ts  profiles_files.service.ts
nnk/src/profiles_history/: profiles_history.controller.spec.ts  profiles_history.controller.ts  (+3 more)
project_folder/exec_rules/: exec_rules_example.json
project_folder/tangas/: tanga_example.json
scripts/: hello_world.py
src/: db_conn.rs  helpers.rs  install.rs  install_old.rs  main.rs
src/features/: categories.rs  mod.rs  new_project.rs  scripts.rs  tangas.rs
src/models/: category_model.rs  mod.rs  relfile_model.rs  script_model.rs  scriptfile_model.rs  tanga_model.rs  tangafile_model.rs
(+35 files in other folders)
